--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SEMPRA PRAHA a.s. — Tradice českého šlechtění, semenářství a průmyslu</title>
   <meta name="description" content="SEMPRA PRAHA a.s. – česká společnost pro šlechtění a semenářství, zahradnickou výrobu a strojírenský závod Děčín. Nabídka osiv řepky, lnu, kmínu a další." />
+
+<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="icon" href="/favicon-32.png" sizes="32x32">
+<link rel="icon" href="/favicon-192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+
   <style>
     :root{--brand-primary:#166534;--brand-primary-hover:#14532d;--brand-tint:#eaf5ee;--text:#0f172a;--muted:#475569;--border:#e2e8f0}
     *{box-sizing:border-box}html{scroll-behavior:smooth}body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;color:var(--text);background:#fff}
@@ -379,7 +387,7 @@
       </div>
       <p class="muted" style="margin-top:.75rem;font-size:.85rem">Všechny obrázky jsou ve stejné složce jako <code>index.html</code>.</p>
     </div>
-  </section>
+  </section>  
 
   <!-- NEWS -->
   <section id="news" style="background:linear-gradient(var(--brand-tint),#fff)">
