--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           <ul style="list-style:none;margin:.5rem 0 0 0;padding:0;display:grid;gap:.25rem">
             <li><a href="https://www.sempra.cz/jarni_repka/index.html" target="_blank" rel="noopener">Řepka jarní – Lužnice ↗</a></li>
             <li><a href="https://www.sempra.cz/linseed/index.html" target="_blank" rel="noopener">Len – Jantar ↗</a></li>
-            <li><a href="https://www.sempra.cz/springrapeseed/index.html" target="_blank" rel="noopener">Spring rapeseed – Sázava ↗</a></li>
+            <li><a href="jarni_ozima_sazava/index.html">Řepka ozimá – Sázava</a></li>
           </ul>
         </div>
         <div>
