změnil jsem horní menu na ee - pokus

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </a>
       <nav class="navlinks" aria-label="Hlavní navigace">
         <a href="#about">O nás</a>
-        <a href="#divisions">Divize_e</a>
+        <a href="#divisions">Divize_ee</a>
         <a href="#products">Produkty</a>
         <a href="#gallery">Galerie</a>
         <a href="#news">Aktuality</a>
