Opraven hybrid na linii

--- a/jarni_ozima_sazava/index.html
+++ b/jarni_ozima_sazava/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Řepka ozimá Sázava | SEMPRA PRAHA a.s.</title>
-  <meta name="description" content="Řepka ozimá Sázava – hybridní odrůda s plastickým výnosem, vysokou olejnatostí a spolehlivou zimovzdorností. Kompletní agrotechnické postupy, výsledky pokusů a servis SEMPRA PRAHA a.s." />
+  <meta name="description" content="Řepka ozimá Sázava – liniová odrůda s plastickým výnosem, vysokou olejnatostí a spolehlivou zimovzdorností. Kompletní agrotechnické postupy, výsledky pokusů a servis SEMPRA PRAHA a.s." />
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="/favicon.ico" sizes="any">
   <style>
@@ -180,7 +180,7 @@
         <div class="card">
           <span class="pill">Řepka ozimá · hybrid Sázava</span>
           <h1 style="margin-top:1rem">Výnosová stabilita a jistota přezimování pro profesionální pěstitele</h1>
-          <p class="lead" style="margin-top:1rem">Sázava je plastická středně raná hybridní odrůda s vysokou olejnatostí a pevnou stébelnou hmotou. Přesvědčí výbornou zimovzdorností, minimálním poléháním a excelentním zdravotním stavem v širokém spektru stanovišť střední Evropy.</p>
+          <p class="lead" style="margin-top:1rem">Sázava je plastická středně raná liniová odrůda s vysokou olejnatostí a pevnou stébelnou hmotou. Přesvědčí výbornou zimovzdorností, minimálním poléháním a excelentním zdravotním stavem v širokém spektru stanovišť střední Evropy.</p>
           <div style="display:flex; flex-wrap:wrap; gap:1rem; margin-top:1.75rem;">
             <a class="btn" href="#prednosti">Objevte přednosti</a>
             <a class="btn btn-outline" href="#vysledky">Podívejte se na výsledky</a>
@@ -196,7 +196,7 @@
       <div class="container" style="display:grid; gap:2rem;">
         <div class="callout">
           <h2>Profil odrůdy</h2>
-          <p class="lead" style="margin-top:.85rem">Hybrid Sázava je určen pro farmáře hledající kombinaci vysokého výnosu semene i oleje s jistotou přezimování. Je doporučena zejména do výrobních oblastí Řepařská, Kukuřičná a přilehlé okrajové horské polohy.</p>
+          <p class="lead" style="margin-top:.85rem">Liniová odrůda Sázava je určen pro farmáře hledající kombinaci vysokého výnosu semene i oleje s jistotou přezimování. Je doporučena zejména do výrobních oblastí Řepařská, Kukuřičná a přilehlé okrajové horské polohy.</p>
           <div class="grid cols-3" style="margin-top:1.75rem;">
             <div>
               <h3 style="color:var(--brand-primary);">Registrace</h3>
@@ -204,7 +204,7 @@
             </div>
             <div>
               <h3 style="color:var(--brand-primary);">Typ</h3>
-              <p style="color:var(--muted); margin-top:.5rem;">Středně raný plastický hybrid · výška středně vysoká</p>
+              <p style="color:var(--muted); margin-top:.5rem;">Středně raná liniová odrůda  · výška středně vysoká</p>
             </div>
             <div>
               <h3 style="color:var(--brand-primary);">Doporučený výsevek</h3>
