oprava odkazu Holovous

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <ul style="margin:0;padding:0;list-style:none;display:grid;gap:.25rem">
             
    
-            <li><a href="https://www.sempra.cz/litomerice/" target="_blank" rel="noopener">Holovousy↗</a></li>
+            <li><a href="https://www.vsuo.cz" target="_blank" rel="noopener">Holovousy↗</a></li>
             <li><a href="https://www.sempra.cz/litomerice/" target="_blank" rel="noopener">Litoměřice ↗</a></li>
             <li><a href="https://www.sempra.cz/litomerice/" target="_blank" rel="noopener">Veleliby ↗</a></li>
               <li><a href="https://www.sempra.cz/litomerice/" target="_blank" rel="noopener">Vrbičany ↗</a></li>          
