přidány odkaz na firmy - Slapy a Losiny

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
           <p class="muted" style="margin:.5rem 0">Šlechtění, udržování, množení a produkce osiv olejnin a drobného ovoce</p>
           <ul style="margin:0;padding:0;list-style:none;display:grid;gap:.25rem">
             <li><a href="https://www.sempra.cz/nabidka_uvod.htm" target="_blank" rel="noopener">Nabídka osiv ↗</a></li>
-            <li><a href="https://www.sempra.cz/slapy/index.htm" target="_blank" rel="noopener">Nabídka drobného ovoce ↗</a></li>
-            <li><a href="https://www.sempra.cz/jarni_repka/index.html" target="_blank" rel="noopener">Slapy u Tábora ↗</a></li>
-            <li><a href="https://www.sempra.cz/linseed/index.html" target="_blank" rel="noopener">Velké Losiny  ↗</a></li>
+            <li><a href="../sempra-web/slapy/index.html" target="_blank" rel="noopener">Nabídka drobného ovoce ↗</a></li>
+            <li><a href="../sempra-web/slapy/index.html" target="_blank" rel="noopener">Slapy u Tábora ↗</a></li>
+            <li><a href="../sempra-web/losiny/index.html" target="_blank" rel="noopener">Velké Losiny  ↗</a></li>
 
           </ul>
         </article>
