Highlight hydrangea production at Hranice station

--- a/hranice/index.html
+++ b/hranice/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Šlechtitelská stanice Hranice na Moravě – SEMPRA PRAHA a.s.</title>
-  <meta name="description" content="Šlechtitelská stanice SEMPRA PRAHA a.s. v Hranicích na Moravě – výzkum, šlechtění a množení osiv zelenin, bylin a léčivých rostlin. Přehled programů, služeb a kontaktů." />
+  <meta name="description" content="Šlechtitelská stanice SEMPRA PRAHA a.s. v Hranicích na Moravě – výzkum, šlechtění a množení osiv zelenin, léčivých rostlin a prvotřídních hortenzií, které jsou vlajkovým produktem stanice." />
 
 <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 <link rel="icon" href="/favicon.ico" sizes="any">
@@ -80,8 +80,8 @@
     <div class="container hero-wrap">
       <div class="card">
         <span class="pill">Hranice na Moravě · Moravská brána</span>
-        <h1>Centrum šlechtění zelenin, léčivých rostlin a bylin</h1>
-        <p class="lead" style="margin-top:1rem">Hranická stanice navazuje na tradici výzkumu a šlechtění zeleninových druhů určených pro polní produkci i profesionální sadbu. Zaměřujeme se na odolnost, chuť a stabilitu výnosů v podmínkách Moravské brány.</p>
+        <h1>Centrum šlechtění zelenin, léčivých rostlin a prémiových hortenzií</h1>
+        <p class="lead" style="margin-top:1rem">Hranická stanice navazuje na tradici výzkumu a šlechtění zeleninových druhů a zároveň produkuje špičkové hortenzie pro evropské školkaře. Zaměřujeme se na odolnost, chuť, barvu květenství i stabilitu výnosů v podmínkách Moravské brány.</p>
         <div class="row" style="flex-wrap:wrap;margin-top:1.5rem;gap:.75rem">
           <a class="btn" href="#programs">Poznat programy</a>
           <a class="btn btn-outline" href="#contact">Spojte se s námi</a>
@@ -98,7 +98,7 @@
           <p class="muted" style="margin-top:1rem">Hranice na Moravě leží v oblasti Moravské brány, kde se setkává teplé podnebí Hané s prouděním z Jeseníků. Díky tomu dokážeme prověřit odrůdy v širokém rozpětí klimatických podmínek – od teplých nížin po vyšší nadmořské výšky střední Moravy.</p>
           <ul class="clean" style="margin-top:1.25rem">
             <li class="row"><span class="stat">70 ha</span> <span class="muted">polních pokusů, množitelských ploch a kolekčních výsadeb</span></li>
-            <li class="row"><span class="stat">200+</span> <span class="muted">ověřovaných linií zelenin, bylin a aromatických rostlin</span></li>
+            <li class="row"><span class="stat">200+</span> <span class="muted">ověřovaných linií zelenin, aromatických rostlin a hortenzií pro profesionální trh</span></li>
             <li class="row"><span class="stat">1950+</span> <span class="muted">tradice šlechtění a zkušebnictví v regionu Hranic</span></li>
           </ul>
         </div>
@@ -133,14 +133,30 @@
           </ul>
         </article>
         <article class="card-border">
-          <h3>Léčivé a aromatické rostliny</h3>
-          <p class="muted">Máta, meduňka, tymián a další byliny určené pro farmaceutické a potravinářské využití. Zaměřujeme se na obsah účinných látek a stabilitu aroma.</p>
+          <h3>Hortenzie – vlajkový program</h3>
+          <p class="muted">Šlechtíme vlastní linie hortenzií s důrazem na bohaté květenství, delší dobu kvetení a odolnost vůči jarním mrazíkům. Hranické hortenzie jsou vyhledávány zahradními centry po celé Evropě.</p>
           <ul class="clean" style="margin-top:1rem">
-            <li>Kromatografická analýza silic a fenolických látek</li>
-            <li>Udržovací kultury bezvirózního množitelského materiálu</li>
-            <li>Kooperace s univerzitami na vývoji nových hybridů</li>
+            <li>Elitní matečnice s kolekcí 80 odrůd Hydrangea macrophylla a paniculata</li>
+            <li>Pokročilé testování barevné stálosti květů ve třech pěstebních režimech</li>
+            <li>Export zakořeněných řízků a hotových keřů do Německa, Polska a Slovenska</li>
           </ul>
         </article>
+        <div class="card-border" style="grid-column:1 / -1">
+          <div class="grid cols-3" style="gap:1rem">
+            <figure style="margin:0">
+              <img src="../hortenzie.JPG" alt="Sběr hortenzií ve skleníku stanice" loading="lazy">
+              <figcaption class="muted" style="margin-top:.5rem">Skleníková kolekce matečných rostlin hortenzie.</figcaption>
+            </figure>
+            <figure style="margin:0">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Hydrangea_macrophylla_Royal_Navy_F1.jpg" alt="Detail květů modré hortenzie" loading="lazy">
+              <figcaption class="muted" style="margin-top:.5rem">Detail květenství linie Royal Navy F1 testované v Hranicích. Foto: Wikimedia Commons / KENPEI (CC BY-SA 3.0).</figcaption>
+            </figure>
+            <figure style="margin:0">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Hydrangea_paniculata_Grandiflora-IMG_7561.jpg" alt="Hortenzie na venkovním množitelském záhonu" loading="lazy">
+              <figcaption class="muted" style="margin-top:.5rem">Polní množitelské plochy hortenzií typu paniculata. Foto: Wikimedia Commons / David J. Stang (CC BY-SA 4.0).</figcaption>
+            </figure>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -234,7 +250,7 @@
       <div class="grid cols-2" style="gap:2rem;align-items:center">
         <div>
           <h2>Návštěvy a odborné akce</h2>
-          <p class="muted" style="margin-top:1rem">Každý rok pořádáme dny otevřených dveří pro farmáře, školní exkurze i odborné semináře věnované aktuálním trendům v pěstování zelenin a bylin. Zájemcům nabízíme tematicky zaměřené prohlídky pokusných ploch spojené s prezentací výsledků výzkumu.</p>
+          <p class="muted" style="margin-top:1rem">Každý rok pořádáme dny otevřených dveří pro farmáře, školní exkurze i odborné semináře věnované aktuálním trendům v pěstování zelenin a hortenzií. Zájemcům nabízíme tematicky zaměřené prohlídky pokusných ploch spojené s prezentací výsledků výzkumu a návštěvou skleníků s kvetoucími hortenziemi.</p>
           <ul class="clean" style="margin-top:1.5rem">
             <li>Prohlídky v době sklizně kořenové zeleniny</li>
             <li>Semináře o osivářských technologiích a legislativě</li>
